2009-01-12  Matias De la Puente  <mfpuente.ar@gmail.com>

	*  watray/watrayprojectspanel.vala:
	*  watray/watrayprojectspanelinterface.vala:

	Added error handling to the project panel to check if the project was
	added to the projects panel and if the item's path is correct.

2009-01-12  Matias De la Puente  <mfpuente.ar@gmail.com>

	*  watraysimple/simpledocumentview.vala:
	*  watraysimple/Makefile.am:
	*  watraysimple/simpleplugin.vala:
	*  watraysimple/simpleprojectmanager.vala:
	*  configure.ac:
	*  watray/watrayproject.vala:
	*  watray/watrayprojectspanel.vala:
	*  watray/watraydocumentview.vala:
	*  watray/watraydocumentspanel.vala:
	*  watray/watrayprojectspanelinterface.vala:
	*  watray/Makefile.am:
	*  watray/watraydocumentspanelinterface.vala:

	Start basic support for a project manager.

2009-01-08  Matias De la Puente  <mfpuente.ar@gmail.com>

	* watray/watrayprojectspanelitem.vala:
	* watray/watrayprojectspanelinterface.vala:
	* watray/Makefile.am
	* watray/watrayprojectspanelproject.vala
	
	Replace Watray.ProjectsPanelItem with Watray.ProjectsPanelProject.
	
2009-01-08  Matias De la Puente  <mfpuente.ar@gmail.com>

	* watray/watraydocumentspanel.vala:
	
	Fix remove_view method due to compiler update
	
2009-01-07  Matias De la Puente  <mfpuente.ar@gmail.com>

	* watray/watrayprojectspanel.vala:
	* watray/watraymainwindow.vala:
	
	Added title and body to the projects panel.
	Update the toggle option on the view menu when the panel hides.
	
2009-01-07  Matias De la Puente  <mfpuente.ar@gmail.com>

	* watray/watrayprojectspanelitem.vala:
	* watray/watrayprojectspanel.vala:
	* watray/watraypluginmanager.vala:
	* watray/watrayplugininfo.vala:
	* watray/watrayprojectspanelinterface.vala:
	* watray/watraymainwindow.vala:
	* watray/watraydocumentspanelview.vala:
	* watray/watraymainwindowinterface.vala:
	* watray/watrayplugin.vala:
	* watray/watrayplugininterface.vala:
	* watray/watraydocumentspanel.vala:
	* watray/watraydocumentspanelinterface.vala: